test/conformance/chainsaw/generating-policies/foreach/data/data-generate-nps/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-generate-nps-1
  labels:
    networkpolicies: "np1-np2-np3"
---
apiVersion: v1
kind: Namespace
metadata:
  name: data-generate-nps-2
